Return original values

--- a/values.yaml
+++ b/values.yaml
@@ -250,7 +250,7 @@ images:
   repoPrefix: ""
   # images.tag Global image tag for all DocSpace applications
   # Does not apply to the Document Server and Elasticsearch
-  tag: develop.2522
+  tag: 2.6.0
 # JSON Web Token parameters
 jwt:
   # jwt.enabled Specifies the enabling the JSON Web Token validation by the DocSpace
@@ -307,7 +307,7 @@ initContainers:
   waitStorage:
     image:
       # initContainers.waitStorage.image.repository app-wait-storage initContainer image repository
-      repository: onlyoffice/4testing-docspace-wait-bin-share
+      repository: onlyoffice/docspace-wait-bin-share
       # initContainers.waitStorage.image.tag app-wait-storage initContainer image tag
       # If set to, it takes priority over the `images.tag`
       tag: ""
@@ -328,7 +328,7 @@ initContainers:
   initStorage:
     image:
       # initContainers.initStorage.image.repository app-init-storage initContainer image repository
-      repository: onlyoffice/4testing-docspace-bin-share
+      repository: onlyoffice/docspace-bin-share
       # initContainers.initStorage.image.tag app-init-storage initContainer image tag
       # If set to, it takes priority over the `images.tag`
       tag: ""
@@ -535,7 +535,7 @@ files:
   # Files container image parameters
   image:
     # files.image.repository files container image repository
-    repository: onlyoffice/4testing-docspace-files
+    repository: onlyoffice/docspace-files
     # files.image.tag files container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -700,7 +700,7 @@ peopleServer:
   # People Server container image parameters
   image:
     # peopleServer.image.repository People Server container image repository
-    repository: onlyoffice/4testing-docspace-people-server
+    repository: onlyoffice/docspace-people-server
     # peopleServer.image.tag People Server container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -869,7 +869,7 @@ router:
   # Router container image parameters
   image:
     # router.image.repository Router container image repository
-    repository: onlyoffice/4testing-docspace-router
+    repository: onlyoffice/docspace-router
     # router.image.tag Router container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -1094,7 +1094,7 @@ healthchecks:
   # Healthchecks container image parameters
   image:
     # healthchecks.image.repository Healthchecks container image repository
-    repository: onlyoffice/4testing-docspace-healthchecks
+    repository: onlyoffice/docspace-healthchecks
     # healthchecks.image.tag Healthchecks container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -1259,7 +1259,7 @@ apiSystem:
   # Api System container image parameters
   image:
     # apiSystem.image.repository Api System container image repository
-    repository: onlyoffice/4testing-docspace-api-system
+    repository: onlyoffice/docspace-api-system
     # apiSystem.image.tag Api System container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -1432,7 +1432,7 @@ api:
   # Api container image parameters
   image:
     # api.image.repository Api container image repository
-    repository: onlyoffice/4testing-docspace-api
+    repository: onlyoffice/docspace-api
     # api.image.tag Api container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -1600,7 +1600,7 @@ backup:
   # Backup container image parameters
   image:
     # backup.image.repository Backup container image repository
-    repository: onlyoffice/4testing-docspace-backup
+    repository: onlyoffice/docspace-backup
     # backup.image.tag Backup container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -1763,7 +1763,7 @@ backupBackgroundTasks:
   # Backup Background Tasks container image parameters
   image:
     # backupBackgroundTasks.image.repository Backup Background Tasks container image repository
-    repository: onlyoffice/4testing-docspace-backup-background
+    repository: onlyoffice/docspace-backup-background
     # backupBackgroundTasks.image.tag Backup Background Tasks container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -1926,7 +1926,7 @@ clearEvents:
   # Clear Events container image parameters
   image:
     # clearEvents.image.repository Clear Events container image repository
-    repository: onlyoffice/4testing-docspace-clear-events
+    repository: onlyoffice/docspace-clear-events
     # clearEvents.image.tag Clear Events container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -2089,7 +2089,7 @@ doceditor:
   # Doceditor container image parameters
   image:
     # doceditor.image.repository Doceditor container image repository
-    repository: onlyoffice/4testing-docspace-doceditor
+    repository: onlyoffice/docspace-doceditor
     # doceditor.image.tag Doceditor container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -2254,7 +2254,7 @@ filesServices:
   # Files Services container image parameters
   image:
     # filesServices.image.repository Files Services container image repository
-    repository: onlyoffice/4testing-docspace-files-services
+    repository: onlyoffice/docspace-files-services
     # filesServices.image.tag Files Services container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -2417,7 +2417,7 @@ login:
   # Login container image parameters
   image:
     # login.image.repository Login container image repository
-    repository: onlyoffice/4testing-docspace-login
+    repository: onlyoffice/docspace-login
     # login.image.tag Login container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -2906,7 +2906,7 @@ notify:
   # Notify container image parameters
   image:
     # notify.image.repository Notify container image repository
-    repository: onlyoffice/4testing-docspace-notify
+    repository: onlyoffice/docspace-notify
     # notify.image.tag Notify container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -3069,7 +3069,7 @@ socket:
   # Socket container image parameters
   image:
     # socket.image.repository Socket container image repository
-    repository: onlyoffice/4testing-docspace-socket
+    repository: onlyoffice/docspace-socket
     # socket.image.tag Socket container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -3234,7 +3234,7 @@ ssoauth:
   # ssoauth container image parameters
   image:
     # ssoauth.image.repository ssoauth container image repository
-    repository: onlyoffice/4testing-docspace-ssoauth
+    repository: onlyoffice/docspace-ssoauth
     # ssoauth.image.tag ssoauth container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -3393,7 +3393,7 @@ studio:
   # Studio container image parameters
   image:
     # studio.image.repository Studio container image repository
-    repository: onlyoffice/4testing-docspace-studio
+    repository: onlyoffice/docspace-studio
     # studio.image.tag Studio container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -3556,7 +3556,7 @@ studioNotify:
   # Studio Notify container image parameters
   image:
     # studioNotify.image.repository Studio Notify container image repository
-    repository: onlyoffice/4testing-docspace-studio-notify
+    repository: onlyoffice/docspace-studio-notify
     # studioNotify.image.tag Studio Notify container image tag
     # If set to, it takes priority over the `images.tag`
     tag: ""
@@ -4119,7 +4119,7 @@ install:
         enabled: true
         image:
           # install.job.initContainers.migrationRunner.image.repository Job by pre-install Migration Runner container image repository
-          repository: onlyoffice/4testing-docspace-migration-runner
+          repository: onlyoffice/docspace-migration-runner
           # install.job.initContainers.migrationRunner.image.tag Job by pre-install Migration Runner container image tag
           # If set to, it takes priority over the `images.tag`
           tag: ""
@@ -4205,7 +4205,7 @@ upgrade:
         enabled: true
         image:
           # upgrade.job.initContainers.migrationRunner.image.repository Job by pre-upgrade Migration Runner container image repository
-          repository: onlyoffice/4testing-docspace-migration-runner
+          repository: onlyoffice/docspace-migration-runner
           # upgrade.job.initContainers.migrationRunner.image.tag Job by pre-upgrade Migration Runner container image tag
           # If set to, it takes priority over the `images.tag`
           tag: ""
