--- a/templates/configmaps/identity.yaml
+++ b/templates/configmaps/identity.yaml
@@ -23,5 +23,5 @@ data:
   SERVER_PORT_IDENTITY: "ASC.Identity.Authorization"
   SERVER_PORT_IDENTITY_API: "ASC.Identity.Registration"
   SPRING_PROFILES_ACTIVE: "dev"
-  JDBC_USER_NAME: "root"  
+  JDBC_USER_NAME: {{ .Values.connections.mysqlUser | quote }} 
 {{- end }}
