--- a/templates/jobs/identity-migration.yaml
+++ b/templates/jobs/identity-migration.yaml
@@ -83,8 +83,8 @@ spec:
           - name: JDBC_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: mysql
-                key: mysql-root-password
+                name: {{ template "docspace.mysql.secretName" . }}
+                key: {{ .Values.connections.mysqlSecretKeyPassword }}
           envFrom:
           - configMapRef:
               name: identity
