--- a/values.yaml
+++ b/values.yaml
@@ -2659,6 +2659,10 @@ identity:
     limits:
       memory: "2Gi"
       cpu: "2000m"
+  # identity.mysqlUser Database user who will be used by the Files service to connect to the database
+  # If not set, `connections.mysqlUser` will be used
+  # If set to, it takes priority over the `connections.mysqlUser`
+  mysqlUser: ""
 
 # DocSpace Identity API application parameters
 # This block defines the parameters common to all the Pods of this application
@@ -2818,6 +2822,10 @@ identityApi:
     limits:
       memory: "2Gi"
       cpu: "2000m"
+  # identityApi.mysqlUser Database user who will be used by the Files service to connect to the database
+  # If not set, `connections.mysqlUser` will be used
+  # If set to, it takes priority over the `connections.mysqlUser`
+  mysqlUser: ""
 
 # DocSpace Notify application parameters
 # This block defines the parameters common to all the Pods of this application
@@ -4332,6 +4340,10 @@ identityMigration:
       limits:
         memory: "1Gi"
         cpu: "1000m"
+  # identityMigration.mysqlUser Database user who will be used by the Files service to connect to the database
+  # If not set, `connections.mysqlUser` will be used
+  # If set to, it takes priority over the `connections.mysqlUser`
+  mysqlUser: ""
 
 # DocSpace Opensearch StatefulSet parameters
 #
