--- a/templates/configmaps/identity.yaml
+++ b/templates/configmaps/identity.yaml
@@ -15,9 +15,8 @@ metadata:
     {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
     {{- end }}
 data:
-  JDBC_URL: {{ .Values.connections.mysqlHost | quote  }}
+  JDBC_URL: {{ .Values.connections.mysqlHost | quote  }}:{{ .Values.connections.mysqlPort | quote }}
   JDBC_DATABASE: {{ .Values.connections.mysqlDatabase | quote }}
-  JDBC_PORT: {{ .Values.connections.mysqlPort | quote }}
   REDIS_HOST: {{ .Values.connections.redisHost | quote }}
   REDIS_USERNAME: {{ .Values.connections.redisUser | quote }}
   REDIS_PORT: {{ .Values.connections.redisPort | quote }}
