--- a/values.yaml
+++ b/values.yaml
@@ -45,8 +45,8 @@ connections:
   # connections.redisUser The Redis user name
   # ref: https://redis.io/docs/management/security/acl/
   redisUser: default
-  ## connections.redisDB Number of the redis logical database to be selected
-  ## ref: https://redis.io/commands/select/
+  # connections.redisDB Number of the redis logical database to be selected
+  # ref: https://redis.io/commands/select/
   redisDB: "0"
   # connections.redisExistingSecret Name of existing secret to use for Redis password
   # Must contain the key specified in `connections.redisSecretKeyName`
@@ -2599,7 +2599,7 @@ identity:
   # It is used to trigger events to run at certain points in a container's lifecycle
   # There are two hooks that are exposed: `PostStart` and `PreStop`
   lifecycleHooks: {}
-  # identity.containerPorts.login Identity container port
+  # identity.containerPorts.identity Identity container port
   containerPorts:
     identity: 8080
   # Probe used for the Identity container: startup, readiness and liveness probes
@@ -2762,7 +2762,7 @@ identityApi:
   # It is used to trigger events to run at certain points in a container's lifecycle
   # There are two hooks that are exposed: `PostStart` and `PreStop`
   lifecycleHooks: {}
-  # identityApi.containerPorts.login IdentityApi container port
+  # identityApi.containerPorts.app IdentityApi container port
   containerPorts:
     app: 9090
   # Probe used for the IdentityApi container: startup, readiness and liveness probes
