--- a/values.yaml
+++ b/values.yaml
@@ -2599,9 +2599,9 @@ identity:
   # It is used to trigger events to run at certain points in a container's lifecycle
   # There are two hooks that are exposed: `PostStart` and `PreStop`
   lifecycleHooks: {}
-  # identity.containerPorts.app Identity container port
+  # identity.containerPorts.authorization Identity container port
   containerPorts:
-    app: 8080
+    authorization: 8080
   # Probe used for the Identity container: startup, readiness and liveness probes
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   # The parameters below for startup probes are used only when `identity.startupProbe.enabled=true`
@@ -2767,9 +2767,9 @@ identityApi:
   # It is used to trigger events to run at certain points in a container's lifecycle
   # There are two hooks that are exposed: `PostStart` and `PreStop`
   lifecycleHooks: {}
-  # identityApi.containerPorts.app IdentityApi container port
+  # identityApi.containerPorts.api IdentityApi container port
   containerPorts:
-    app: 9090
+    api: 9090
   # Probe used for the IdentityApi container: startup, readiness and liveness probes
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   # The parameters below for startup probes are used only when `identityApi.startupProbe.enabled=true`
